# Explainable-Cross-Domain-Forensic-Sketch-to-Photo-Retrieval-Using-Deep-Metric-Learning

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: example_rankings.csv  example_summary.json
src/sketch_xai/: __init__.py  data.py  evaluate.py  gradcam.py  infer.py  losses.py  metrics.py  model.py  train.py
templates/: pairs_manifest.csv
tools/: generate_docs_assets.py
